--- a/examples/skinned-mesh.html
+++ b/examples/skinned-mesh.html
@@ -60,7 +60,7 @@
                 rigGroup.updateMatrixWorld()
 
                 var rigMesh = rigGroup.children[0];
-                var rootBone = rigGroup.children[1].children[0]
+                var rootBone = rigGroup.children[1].children[0];
 
                 /**
                   This model's bind matrices are -Z forward, while the IK system operates in +Z Forward -- assuming
