--- a/examples/index.html
+++ b/examples/index.html
@@ -248,7 +248,8 @@
                 "single-target",
                 "multi-effector",
                 "readme-example",
-								"skinned-mesh"
+								"skinned-mesh",
+                "body"
             ]
         };
 		function extractQuery() {
