--- a/examples/body.html
+++ b/examples/body.html
@@ -31,7 +31,7 @@
     <body>
       <script src="node_modules/dat.gui/build/dat.gui.js"></script>
       <script src="node_modules/three/build/three.js"></script>
-      <script src="node_modules/three/examples/js/libs/fflate.min.js"></script>
+      <script src="node_modules/fflate/umd/index.js"></script>
       <script src="node_modules/three/examples/js/controls/TransformControls.js"></script>
       <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
       <script src="node_modules/three/examples/js/loaders/FBXLoader.js"></script>
