Link to my github

--- a/examples/index.html
+++ b/examples/index.html
@@ -361,7 +361,7 @@
 
 			// Reveal "View source" button and set attributes to this example
 			viewSrcButton.style.display = '';
-			viewSrcButton.href = 'https://github.com/jsantell/THREE.IK/blob/master/examples/' + selected + '.html';
+			viewSrcButton.href = 'https://github.com/dlhsiao/THREE.IK/blob/body-demo/examples/' + selected + '.html';
 			viewSrcButton.title = 'View source code for ' + getName(selected) + ' on GitHub';
 
 		}
